# workshops

./: .gitignore  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
.next/server/pages/: _app.js  _document.js  _error.js
.next/static/chunks/: 2305d_nextra_dist_280856._.js  2305d_nextra_dist_280856._.js.map  2305d_nextra_dist_9a1034._.js  2305d_nextra_dist_9a1034._.js.map  4b4fd_next_1a494f._.js  4b4fd_next_1a494f._.js.map  4b4fd_next_50383b._.js  4b4fd_next_50383b._.js.map  4b4fd_next_dist_9a7b88._.js  4b4fd_next_dist_9a7b88._.js.map  4b4fd_next_dist_client_ab5484._.js  4b4fd_next_dist_client_ab5484._.js.map  4b4fd_next_dist_compiled_3a8377._.js  4b4fd_next_dist_compiled_3a8377._.js.map  4b4fd_next_dist_compiled_react-dom_f2ab44._.js  4b4fd_next_dist_compiled_react-dom_f2ab44._.js.map  545c3_react-dom_1c85ba._.js  545c3_react-dom_1c85ba._.js.map  61dca_@swc_helpers_cjs_e27e0a._.js.map  7f7f1_@floating-ui_react_dist_88de3b._.js  7f7f1_@floating-ui_react_dist_88de3b._.js.map  [root of the server]__027ee4._.js  [root of the server]__027ee4._.js.map  [root of the server]__2e1cf5._.js  _2bd973._.js  (+34 more)
app/: layout.jsx
content/: _meta.js  ai-la-salon-feb-11.mdx  index.mdx
demos/ai-la-salon-feb-11/: main.py  pyproject.toml
demos/ai_la_salon_feb_11/: pyproject.toml  scratch.py
demos/scratch.py/: main.py  pyproject.toml
(+95 files in other folders)
